ingress.yaml
---
apiVersion: 
  kind: Ingress
  metadata: 
    name: ingress
  spec: 
    rules: 
      - 
        host: test.test.com
        http: 
          paths: 
            - 
              backend: 
                serviceName: service-1
                servicePort: 5000
              path: /service-1
            - 
              backend: 
                serviceName: service-2
                servicePort: 8080
              path: /service-2
    tls: 
      - 
        hosts: 
          - test.test.com
        secretName: prod
